# alignai

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.neon.yml  docker-compose.override.yml  docker-compose.yml  healthcheck.py  render.yaml  test-docker-setup.sh
.github/: dependabot.yml
.github/workflows/: agent.yml  backend.yml  frontend.yml
agent/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  ingest.py  langgraph.json  pyproject.toml  retrieve.py
agent/app/: cli.py
agent/app/core/: config.py  logging.py  utils.py
agent/app/graph/: edges.py  graph.py  state.py
agent/app/infrastructure/: embeddings.py  ingest.py  llm_client.py  qdrant_client.py
agent/app/models/: intent.py  rewrite.py
agent/app/nodes/: fallback_node.py  generator_node.py  intent_node.py  retriever_node.py  rewrite_objective_node.py
agent/app/prompts/: generator_prompt.py  intent_prompt.py  rewrite_prompt.py
agent/tests/: conftest.py
agent/tests/integration/: test_embeddings_qdrant.py  test_retriever.py
agent/tests/unit/: test_agent_flows.py  test_cli.py  test_config.py  test_edges.py  test_embeddings.py  test_fallback_node.py  test_generator_node.py  test_graph.py  test_ingest.py  test_intent_node.py  test_llm_client.py  test_logging.py  test_qdrant_client.py  test_retriever_node.py  test_rewrite_node.py
backend/: .env.example  Dockerfile  Dockerfile.dev  alembic.ini  fastapi-standards.md  main.py  pyproject.toml
backend/app/api/: dependencies.py
backend/app/api/routes/: align.py  auth.py  sessions.py  users.py
backend/app/core/: config.py  logging.py
backend/app/infrastructure/: auth.py  database.py  keep_alive.py  langgraph_client.py
backend/app/models/: requests.py  responses.py  user.py
backend/app/services/: align_service.py  auth_service.py  session_service.py
backend/migrations/: README  env.py
backend/migrations/versions/: 90ebfa804ead_initial_schema.py
backend/tests/: conftest.py
backend/tests/fixtures/langgraph_events/: compliance_report.json  general_chat_fallback.json  low_relevance_rewrite.json
backend/tests/integration/: test_align_endpoint.py  test_auth_session_align_flow.py  test_sessions_endpoint.py
backend/tests/unit/: test_align_service.py  test_align_service_cassette.py  test_auth_service.py  test_config.py  test_database.py  test_dependencies.py  test_health.py  test_keep_alive.py  test_logging.py  test_session_service.py
frontend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  docker-compose.yml  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: ChatSkeleton.jsx  Spinner.jsx
frontend/src/components/Auth/: AuthLayout.jsx  DeleteAccountModal.jsx  LoginForm.jsx  SignupForm.jsx
frontend/src/components/ErrorBoundary/: ErrorBoundary.jsx  FallbackUI.jsx
frontend/src/components/ErrorBoundary/__tests__/: ErrorBoundary.test.jsx
frontend/src/components/InputSection/: AuditButton.jsx  CharacterCounter.jsx  FeatureTextarea.jsx
frontend/src/components/Layout/: AppShell.jsx  ProtectedRoute.jsx  Sidebar.jsx
frontend/src/components/Layout/__tests__/: ProtectedRoute.test.jsx
frontend/src/components/ResponseSection/: ErrorDisplay.jsx  PlainTextDisplay.jsx  ReportDocument.jsx  StatusIndicator.jsx
frontend/src/components/__tests__/: AuditButton.test.jsx  CharacterCounter.test.jsx  DeleteAccountModal.test.jsx  LoginForm.test.jsx  Sidebar.test.jsx  SignupForm.test.jsx  StatusIndicator.test.jsx
frontend/src/context/: AuthContext.jsx  SessionContext.jsx
frontend/src/context/__tests__/: AuthContext.test.jsx  SessionContext.test.jsx
frontend/src/hooks/: useAuth.js  useSession.js  useStream.js
frontend/src/hooks/__tests__/: useStream.test.js
frontend/src/pages/: AlignPage.jsx
frontend/src/pages/__tests__/: AlignPage.test.jsx
frontend/src/services/: alignApi.js  authApi.js
frontend/src/services/__tests__/: alignApi.test.js  authApi.test.js
frontend/src/styles/: app.css  tokens.css
frontend/src/test/: setup.js
