[project]
name = "alignai-agent"
version = "0.1.0"
description = "AlignAI LangGraph agent service"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "qdrant-client>=1.12.0",
    "google-generativeai>=0.8.0",
    "pydantic-settings>=2.6.0",
    "python-json-logger>=3.2.0",
    "langgraph-cli>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
