[project]
name = "alignai-agent"
version = "0.1.0"
description = "AlignAI LangGraph agent service"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "qdrant-client>=1.12.0",
    "google-genai>=1.0.0",
    "pydantic-settings>=2.6.0",
    "python-json-logger>=3.2.0",
    "pymupdf>=1.24.0",
    "langchain-groq>=0.3.0",
    "pymupdf4llm>=1.27.2.3",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "tenacity>=8.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    # CLI used to run `langgraph dev` locally and generate the prod Dockerfile.
    # Not a runtime dependency — production is served by the langchain/langgraph-api image.
    "langgraph-cli[inmem]>=0.4.30",
]

[tool.mypy]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pymupdf4llm.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
