[project]
name = "alignai-backend"
version = "0.1.0"
description = "AlignAI FastAPI backend service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "httpx>=0.28.0",
    "langgraph-sdk>=0.1.0",
    "tenacity>=8.0.0",
    "python-json-logger>=3.2.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "pydantic[email]>=2.0.0",
    "alembic>=1.18.4",
    "slowapi>=0.1.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-python-jose>=0.1.0",
    "types-passlib>=1.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
