[project]
name = "alignai-backend"
version = "0.1.0"
description = "AlignAI FastAPI backend service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.30.0",
    "httpx>=0.28.0",
    "langgraph-sdk>=0.1.0",
    "tenacity>=8.0.0",
    "python-json-logger>=3.2.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5.1.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.9",
    "pydantic[email]>=2.13.4",
    "alembic>=1.18.5",
    "slowapi>=0.1.10",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.21",
    "mypy>=2.3.0",
    "types-python-jose>=0.1.0",
    "types-passlib>=1.7.0",
]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
